adding events section

--- a/_projects/01. lynne.md
+++ b/_projects/01. lynne.md
@@ -1,6 +1,6 @@
 ---
 title: Lynne Sosnowski Designs
-category: Knitwear Photography
+category: Knitting
 img: 20131117-DSC_3201.jpg
 name: lynne
 ---
